fixed alignment issues

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,7 +16,7 @@ p {
 .termTextArea {
     display: flex;
     flex-direction: row;
-    vertical-align: bottom;
+    align-items: baseline; //aligns textarea text with p text
 }
 textarea{
     background-color: black;
@@ -28,7 +28,6 @@ textarea{
     border: none;
     outline: none;
     resize: none;
-    //TODO: align textarea text with p text
 }
 .termTextArea textarea { 
     flex-grow: 10; 
